<resources>
    <string name="app_name">Employers</string>
    <string name="employers">Empleados</string>
    <string name="create_employer">Crear Nuevo Empleado</string>
    <string name="read_employer">Listar Empleados</string>
    <string name="update_employer">Actualizar Empleado</string>
    <string name="delete_employer">Eliminar Empleado</string>
    <string name="company">Vortex Solutions</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Resgitrate</string>
    <string name="register_title">Registro</string>
    <string name="email_register">Correo Electrónico de Registro</string>
    <string name="password_register">Crear Contraseña</string>
    <string name="register_true">Resgistrar</string>
    <string name="cancel">Cancelar</string>
    <string name="success">Correcto!</string>
    <string name="new_user">Nuevo Usuario</string>
    <string name="names">Nombres</string>
    <string name="lastnames">Apellidos</string>
    <string name="id"># Identificación</string>
    <string name="num1">Número de Contacto 1</string>
    <string name="num2">Número de Contacto 2</string>
    <string name="num3">Número de Contacto 3</string>
    <string name="salary">Salario Mensual</string>
    <string name="send">Crear Usuario</string>
    <string name="id_txt">Identificado con</string>
    <string name="update_user">Actualizar Empleado</string>
    <string name="delete_user">Eliminar Empleado</string>
</resources>
