<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".View.Activity.Dashboard">

    <LinearLayout
        android:id="@+id/dasboard_opcs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingStart="26dp"
        android:paddingEnd="26dp">

        <Button
            android:id="@+id/dasboard_btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:background="@drawable/btn_create_user"
            android:drawableStart="@drawable/v_create_user"
            android:focusable="true"
            android:onClick="createUser"
            android:paddingStart="26dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/create_employer"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dasboard_btn_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:background="@drawable/btn_read_user"
            android:drawableStart="@drawable/v_read_user"
            android:focusable="true"
            android:onClick="listUsers"
            android:paddingStart="26dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/read_employer"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dasboard_btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:background="@drawable/btn_update_user"
            android:drawableStart="@drawable/v_update_user"
            android:focusable="true"
            android:onClick="updateUser"
            android:paddingStart="26dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/update_employer"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dasboard_btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_delete_user"
            android:drawableStart="@drawable/v_delete_user"
            android:focusable="true"
            android:paddingStart="26dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/delete_employer"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/dasboard_btn_logout"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dasboard_opcs"
        android:layout_marginStart="26dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_delete_user"
        android:drawableStart="@drawable/v_off"
        android:focusable="true"
        android:onClick="Logout"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:text="@string/company"
        android:textColor="@android:color/white" />

</RelativeLayout>