<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/update_user"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/updateuser_layout_edit_idFind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:theme="@style/EditTextFiledsForms"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateuser_edit_idFind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/updateuser_btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:background="@android:color/transparent"
            android:padding="16dp"
            app:srcCompat="@drawable/v_search" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/updateuser_main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateuser_layout_edit_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:theme="@style/EditTextFiledsForms"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateuser_edit_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/names"
                    android:inputType="textCapSentences"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateuser_layout_edit_lastnames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:theme="@style/EditTextFiledsForms"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateuser_edit_lastnames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastnames"
                    android:inputType="textCapSentences"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/updateuser_layout_edit_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:theme="@style/EditTextFiledsForms"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/updateuser_edit_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/id"
                        android:inputType="number"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/updateuser_spn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateuser_layout_edit_num1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:theme="@style/EditTextFiledsForms"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateuser_edit_num1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/num1"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateuser_layout_edit_num2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:theme="@style/EditTextFiledsForms"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateuser_edit_num2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/num2"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateuser_layout_edit_num3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:theme="@style/EditTextFiledsForms"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateuser_edit_num3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/num3"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateuser_layout_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:theme="@style/EditTextFiledsForms"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateuser_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateuser_layout_edit_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:theme="@style/EditTextFiledsForms"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateuser_edit_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/salary"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>